--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/three": "^0.183.1",
     "convex": "^1.32.0",
     "next": "16.1.6",
+    "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "three": "^0.183.1"
