--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@clerk/themes": "^2.4.55",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
+    "@react-three/postprocessing": "^3.0.4",
     "@types/three": "^0.183.1",
     "convex": "^1.32.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
+    "postprocessing": "^6.38.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "three": "^0.183.1"
