--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postprocessing": "^6.38.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "stripe": "^20.3.1",
     "three": "^0.183.1"
   },
   "devDependencies": {
